# grillkit

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  questions_structure.json
.cursor/rules/: PROJECT_RULES.md  docstrings.mdc  documentation-updates.mdc  file-headers.mdc  no-comments.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
.kilocode/rules/: GrillKit Project Rules.md  architecture-first.md  docs-update.md  docstrings.md  file headers.md  no-comments.md
alembic/: env.py
alembic/versions/: 20260526_0001_initial_schema.py  20260526_0002_selection_spec_track.py  20260526_0003_drop_selection_spec_version.py  20260608_0004_theory_sections.py  20260608_0005_answers_theory_section_id.py  20260608_0006_session_mode_selection_v2.py  20260608_0007_drop_interview_legacy_columns.py  20260609_0008_coding_sections.py  20260610_0009_coding_task_naming.py  20260612_0010_answers_expected_points.py  20260615_0011_known_questions.py
app/: __init__.py  database.py  main.py  models.py  paths.py  questions.py  templating.py  uow.py
app/ai/: __init__.py  audio_probe.py  base.py  factory.py  faster_whisper_transcriber.py  llm_models.py  openai_compatible.py  speech_transcriber.py
app/api/: __init__.py  config.py  dashboard.py  deps.py  dictation.py  interview.py  interview_errors.py  root.py  setup.py  setup_form.py  speech.py  speech_page_context.py  ws_protocol.py
app/coding/: __init__.py
app/domain/: __init__.py  exceptions.py  interview_lifecycle.py  (+1 more)
deploy/: judge0.conf
templates/: _section_feedback.html  base.html  coding_interview.html  coding_review.html  config.html  config_form.html  config_success.html  config_test_result.html  dashboard.html  interview.html  known_questions.html  model_status_panel.html  question_voice_banner.html  question_voice_panel.html  session_results.html  setup.html  speech_model_banner.html  speech_model_panel.html  speech_model_status.html  speech_tts_status.html  theory_review.html
tests/: __init__.py  conftest.py  fakes.py  test_ai_base.py  test_ai_factory.py  test_alembic_migrations.py  test_answer_ai_evaluation.py  test_answer_processing.py  test_api_routers.py  test_artifact_download.py  test_audio_answer_api.py  test_audio_answer_processing.py  test_coding_api.py  test_coding_availability.py  test_coding_evaluator.py  test_coding_planning.py  test_coding_repository.py  test_coding_runner.py  test_coding_tasks.py  test_config_service.py  test_dashboard_query.py  test_database.py  test_dictation_ws.py  test_domain.py  test_domain_selection.py  test_domain_timer.py  test_hf_hub_runtime.py  test_interview_completion.py  test_interview_creation.py  test_interview_errors.py  test_interview_evaluator.py  test_interview_lifecycle.py  test_interview_page.py  test_interview_selection.py  test_interview_timer.py  test_interview_ws_integration.py  test_judge0_client.py  test_llm_catalog.py  test_locales.py  test_main.py  (+18 more)
(+485 files in other folders)
