[project]
name = "grillkit"
version = "2026.5.20"
description = "AI Interview Trainer - Practice technical interviews with AI"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.49.0",
    "python-multipart==0.0.29",
    "sqlalchemy==2.0.49",
    "openai==2.38.0",
    "jinja2==3.1.6",
    "pyyaml==6.0.3",
    "pydantic==2.13.4",
    "httpx>=0.28.1",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=1.15.0",
    "piper-tts>=1.4.2",
    "alembic>=1.18.4",
    "pydeps>=3.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "mypy==2.1.0",
    "ruff==0.15.13",
    "types-pyyaml==6.0.12.20260518",
    "types-tqdm>=4.67.3.20260518",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = ["."]

plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["tests.*", "tests"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["faster_whisper", "faster_whisper.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["piper", "piper.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "types-tqdm>=4.67.3.20260518",
]
